Blender 2.8 Make Duplicates Real with Keep Hierarchy do nothing #60056

Closed
opened 2019-01-02 09:00:30 +01:00 by Kenneth · 6 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken: blender-2.80-4dd0a90f4213-win64.zp

Short description of error
Make duplicates real with Keep Hierarchy set to true do nothing

Exact steps for others to reproduce the error
Create three mesh A, B, C
Set C parent to B and B parent to A
Enable Instancing on A
Make Duplicates Real on A
Newly created C is nothing parent to anything, it should parent to newly create B

**System Information** Operating system: Graphics card: **Blender Version** Broken: blender-2.80-4dd0a90f4213-win64.zp **Short description of error** Make duplicates real with Keep Hierarchy set to true do nothing **Exact steps for others to reproduce the error** Create three mesh A, B, C Set C parent to B and B parent to A Enable Instancing on A Make Duplicates Real on A Newly created C is nothing parent to anything, it should parent to newly create B
Author

Added subscriber: @Kinwailo

Added subscriber: @Kinwailo
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-01-02 10:54:14 +01:00
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by 65b4ebbbd5

This issue was referenced by 65b4ebbbd5c497f732fab94bc4389533be22d4e3
Member

Caused by 36ca072375
[one instance of DEG_get_original_object was neccesary, the other one breaks getting the parent in BLI_ghash_lookup]

I think D4154 should fix this

Caused by 36ca072375 [one instance of `DEG_get_original_object` was neccesary, the other one breaks getting the parent in `BLI_ghash_lookup`] I think [D4154](https://archive.blender.org/developer/D4154) should fix this
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60056
No description provided.