Fix T60056: Make Duplicates Real with Keep Hierarchy does nothing

Caused by rB36ca072375deea4803df4681716c1d3224095e07
[one instance of `DEG_get_original_object` was neccesary, the other one
breaks getting the parent in `BLI_ghash_lookup`]

Reviewed by: brecht

Differential Revision: https://developer.blender.org/D4154